# feels

./: .gitignore  MANIFEST.in  README.md  changes.md  pyproject.toml  test_streak.py  trailer.tape
.github/workflows/: publish.yml
src/feels/: add.py  calendar_cmd.py  cli.py  config.py  config_cmd.py  dashboard_cmd.py  database.py  delete.py  edit.py  export_cmd.py  graph_cmd.py  help_cmd.py  home.py  logs.py  onboarding.py  project_cmd.py  reminder_cmd.py  reset_cmd.py  stats_cmd.py  utils.py  validation.py
src/feels.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_config.py  test_database.py  test_utils.py
