[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feels"
version = "1.2.3"
description = "A local-first CLI mood tracker for developers"
authors = [{name = "Gabriel Pereira", email = "gabriel@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mood", "tracker", "cli", "mental-health", "journal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0",
    "pyfiglet>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
feels = ["bin/terminal-notifier.app/Contents/MacOS/terminal-notifier",
         "bin/terminal-notifier.app/Contents/Info.plist",
         "bin/terminal-notifier.app/Contents/PkgInfo",
         "bin/terminal-notifier.app/Contents/Resources/**/*"]

[project.urls]
"Homepage" = "https://github.com/gabrielpereira/feels"
"Bug Tracker" = "https://github.com/gabrielpereira/feels/issues"
"Documentation" = "https://github.com/gabrielpereira/feels#readme"
"Source Code" = "https://github.com/gabrielpereira/feels"

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black", "ruff"]

[project.scripts]
feels = "feels.cli:main"
fls = "feels.cli:main"
